--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@types/facebook-js-sdk": "^2.8.4",
     "core-js": "^2.4.1",
     "express": "^4.16.3",
+    "ngx-facebook": "^2.4.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.19"
   },
